# i2s_32bit_rp2040

./: .gitignore  LICENSE  README.md  pulse_viewer_i2s_setup.pvs
.github/workflows/: build_test.yml
miscellaneous/: pulse_viewer_i2s_setup.pvs
testing/: CMakeLists.txt  audio_i2s.pio  i2s.cpp  i2s.hpp  main.cpp  make.sh  pico_sdk_import.cmake  run_openocd.sh
